--- a/Lab15/lab15.ipynb
+++ b/Lab15/lab15.ipynb
@@ -84,7 +84,9 @@
    "id": "78e96cc4",
    "metadata": {},
    "source": [
-    "## Creación de datos de prueba"
+    "## Creación de datos de prueba\n",
+    "\n",
+    "Instalación de driver, se recomienda correr en un enviroment de conda."
    ]
   },
   {
@@ -115,8 +117,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "57b15792",
+   "metadata": {},
+   "source": [
+    "Script en python"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "4e4b376e",
    "metadata": {},
    "outputs": [
@@ -124,29 +134,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Datos de prueba generados exitosamente.\n",
+      "Inserción de datos de prueba completada.\n",
+      "Total de registros insertados: 100810\n",
       "\n",
       "Query 1:\n",
       "Lecturas de temperatura para el sensor SENS001 del día de ayer 2025-07-07:\n",
-      "12 resultados encontrados en 0.0163 segundos\n",
-      "  - 2025-07-07 22:22:09: 27.575427960880024 (TTL: 604799 segundos)\n",
-      "  - 2025-07-07 20:22:09: 34.7803031711525 (TTL: 604798 segundos)\n",
-      "  - 2025-07-07 18:22:09: 34.472052054034165 (TTL: 604798 segundos)\n",
-      "  - 2025-07-07 16:22:09: 22.855188008731396 (TTL: 604797 segundos)\n",
-      "  - 2025-07-07 14:22:09: 15.096105327635264 (TTL: 604797 segundos)\n",
+      "1440 resultados encontrados en 0.0496 segundos\n",
+      "  - 2025-07-07 23:59:03: 23.996825977300986 (TTL: 604788 segundos)\n",
+      "  - 2025-07-07 23:58:03: 18.05019900240751 (TTL: 604788 segundos)\n",
+      "  - 2025-07-07 23:57:03: 22.191578415285527 (TTL: 604788 segundos)\n",
+      "  - 2025-07-07 23:56:03: 20.917350945396255 (TTL: 604788 segundos)\n",
+      "  - 2025-07-07 23:55:03: 17.66867800150658 (TTL: 604788 segundos)\n",
       "\n",
       "Query 2:\n",
-      "Anomalías de humedad para el sensor SENS002 de la hora pasada 2025-07-08T01:\n",
-      "0 resultados encontrados en 0.0280 segundos\n",
+      "Anomalías de humedad para el sensor SENS002 de la hora pasada 2025-07-08T15:\n",
+      "19 resultados encontrados en 0.0274 segundos\n",
+      "  - 2025-07-08 15:59:03: 20.99336421314097\n",
+      "  - 2025-07-08 15:56:03: 87.11390164108695\n",
+      "  - 2025-07-08 15:54:03: 20.04462670966518\n",
+      "  - 2025-07-08 15:52:03: 84.68263384130653\n",
+      "  - 2025-07-08 15:50:03: 85.11937172743727\n",
       "\n",
       "Query 3:\n",
       "Datos de más de 6 días de antigüedad (2025-07-02):\n",
-      "12 resultados encontrados en 0.0159 segundos\n",
-      "  - humedad del sensor SENS005 del día 2025-07-02 (TTL: 604771 segundos, 10079 minutos, 167 horas, 6 días)\n",
-      "  - humedad del sensor SENS005 del día 2025-07-02 (TTL: 604771 segundos, 10079 minutos, 167 horas, 6 días)\n",
-      "  - humedad del sensor SENS005 del día 2025-07-02 (TTL: 604770 segundos, 10079 minutos, 167 horas, 6 días)\n",
-      "  - humedad del sensor SENS005 del día 2025-07-02 (TTL: 604770 segundos, 10079 minutos, 167 horas, 6 días)\n",
-      "  - humedad del sensor SENS005 del día 2025-07-02 (TTL: 604770 segundos, 10079 minutos, 167 horas, 6 días)\n"
+      "1440 resultados encontrados en 0.0603 segundos\n",
+      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604797 segundos, 10079 minutos, 167 horas, 6 días)\n",
+      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604797 segundos, 10079 minutos, 167 horas, 6 días)\n",
+      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604797 segundos, 10079 minutos, 167 horas, 6 días)\n",
+      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604797 segundos, 10079 minutos, 167 horas, 6 días)\n",
+      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604797 segundos, 10079 minutos, 167 horas, 6 días)\n"
      ]
     }
    ],
@@ -155,6 +171,7 @@
     "import time\n",
     "from datetime import datetime, timedelta\n",
     "from cassandra.cluster import Cluster\n",
+    "from cassandra.query import SimpleStatement, BatchStatement, BatchType\n",
     "\n",
     "# Parametros de simulación\n",
     "N_SENSORS = 5\n",
@@ -174,46 +191,49 @@
     "}\n",
     "\n",
     "# Conexión a Cassandra en Docker\n",
-    "cluster = Cluster(['localhost'], port=9042)\n",
+    "cluster = Cluster(\n",
+    "  ['localhost'], port=9042,\n",
+    "  protocol_version=4,\n",
+    "  connect_timeout=5,\n",
+    "  idle_heartbeat_interval=30,\n",
+    "  control_connection_timeout=10\n",
+    ")\n",
     "cassandra = cluster.connect('my_keyspace')\n",
     "\n",
     "def create_tables() -> None:\n",
     "    # Crear tabla para lecturas de sensores\n",
     "    cassandra.execute(\"\"\"\n",
-    "        create table if not exists sensor_readings\n",
-    "        (\n",
-    "            measurement_type text,\n",
-    "            sensor_id        text,\n",
-    "            date             text,\n",
-    "            event_time       timestamp,\n",
-    "            measurement      double,\n",
-    "            primary key ( (measurement_type, sensor_id, date), event_time )\n",
-    "        ) with clustering order by (event_time desc) and\n",
-    "                default_time_to_live = 604800\n",
+    "      CREATE TABLE IF NOT EXISTS sensor_readings (\n",
+    "        measurement_type text,\n",
+    "        sensor_id        text,\n",
+    "        date             text,\n",
+    "        event_time       timestamp,\n",
+    "        measurement      double,\n",
+    "        PRIMARY KEY ((measurement_type, sensor_id, date), event_time)\n",
+    "      ) WITH CLUSTERING ORDER BY (event_time DESC)\n",
+    "        AND default_time_to_live = 604800;\n",
     "    \"\"\")\n",
     "    cassandra.execute(\"\"\"\n",
-    "        create table if not exists sensor_anomalies\n",
-    "        (\n",
-    "            measurement_type text,\n",
-    "            sensor_id        text,\n",
-    "            hour             text,\n",
-    "            event_time       timestamp,\n",
-    "            measurement      double,\n",
-    "            primary key ( (measurement_type, sensor_id, hour), measurement, event_time)\n",
-    "        ) with clustering order by (measurement asc, event_time desc) and\n",
-    "                default_time_to_live = 7200\n",
+    "      CREATE TABLE IF NOT EXISTS sensor_anomalies (\n",
+    "        measurement_type text,\n",
+    "        sensor_id        text,\n",
+    "        hour             text,\n",
+    "        event_time       timestamp,\n",
+    "        measurement      double,\n",
+    "        PRIMARY KEY ((measurement_type, sensor_id, hour), measurement, event_time)\n",
+    "      ) WITH CLUSTERING ORDER BY (measurement ASC, event_time DESC)\n",
+    "        AND default_time_to_live = 7200;\n",
     "    \"\"\")\n",
     "    cassandra.execute(\"\"\"\n",
-    "        create table if not exists sensor_by_date\n",
-    "        (\n",
-    "            measurement_type text,\n",
-    "            sensor_id        text,\n",
-    "            date             text,\n",
-    "            event_time       timestamp,\n",
-    "            measurement      double,\n",
-    "            primary key ( date, event_time )\n",
-    "        ) with clustering order by (event_time desc) and\n",
-    "                default_time_to_live = 604800\n",
+    "      CREATE TABLE IF NOT EXISTS sensor_by_date (\n",
+    "        measurement_type text,\n",
+    "        sensor_id        text,\n",
+    "        date             text,\n",
+    "        event_time       timestamp,\n",
+    "        measurement      double,\n",
+    "        PRIMARY KEY (date, event_time)\n",
+    "      ) WITH CLUSTERING ORDER BY (event_time DESC)\n",
+    "        AND default_time_to_live = 604800;\n",
     "    \"\"\")\n",
     "\n",
     "def drop_tables() -> None:\n",
@@ -224,43 +244,69 @@
     "    \n",
     "def generate_sensor_data() -> None:\n",
     "    # Generar indetificadores únicos para cada sensor\n",
-    "    sensor_id: list[str] = [f\"{ID_PREFIX}{str(i).zfill(3)}\" for i in range(1, N_SENSORS + 1)]\n",
+    "    ids: list[str] = [f\"{ID_PREFIX}{str(i).zfill(3)}\" for i in range(1, N_SENSORS + 1)]\n",
+    "\n",
+    "    # Preparar queries\n",
+    "    insert_reading = cassandra.prepare(\"\"\"\n",
+    "        INSERT INTO sensor_readings (measurement_type, sensor_id, date, event_time, measurement)\n",
+    "        VALUES (?, ?, ?, ?, ?)\n",
+    "    \"\"\")\n",
+    "    insert_anomaly = cassandra.prepare(\"\"\"\n",
+    "        INSERT INTO sensor_anomalies (measurement_type, sensor_id, hour, event_time, measurement)\n",
+    "        VALUES (?, ?, ?, ?, ?)\n",
+    "    \"\"\")\n",
+    "    insert_by_date = cassandra.prepare(\"\"\"\n",
+    "        INSERT INTO sensor_by_date (measurement_type, sensor_id, date, event_time, measurement)\n",
+    "        VALUES (?, ?, ?, ?, ?)\n",
+    "    \"\"\")\n",
     "\n",
     "    # Definir el tiempo de inicio y fin para la generación de datos\n",
     "    start_time: datetime = datetime.now() - timedelta(seconds=SAMPLING_TIME)\n",
     "    end_time: datetime = datetime.now()\n",
-    "    current_time: datetime = start_time\n",
+    "    current_time: datetime = end_time   # Insertar en orden descendente\n",
     "\n",
-    "    while current_time <= end_time:\n",
-    "        # Extraer fecha y hora del timestamp actual\n",
-    "        date: str = current_time.strftime('%Y-%m-%d')\n",
-    "        hour: str = current_time.strftime('%Y-%m-%dT%H')\n",
+    "    # Usar BatchStatement para agrupar inserciones\n",
+    "    batch = BatchStatement(batch_type=BatchType.UNLOGGED)\n",
     "\n",
-    "        for id in sensor_id:\n",
+    "    # Lista para almacenar las futuras ejecuciones asíncronas\n",
+    "    futures = []\n",
+    "\n",
+    "    # Limite de inflight para evitar sobrecargar Cassandra\n",
+    "    max_inflight = 16\n",
+    "\n",
+    "    while current_time >= start_time:\n",
+    "        date = current_time.strftime('%Y-%m-%d')\n",
+    "        hour = current_time.strftime('%Y-%m-%dT%H')\n",
+    "\n",
+    "        for id in ids:\n",
     "            for type in MESUREMENTS_TYPES:\n",
     "                ext_low, ext_high = EXTENDED_RANGE[type]\n",
-    "                # Generar un valor en el rango extendido\n",
-    "                measurement: float = random.uniform(ext_low, ext_high)\n",
-    "                # Insertar en tablas\n",
-    "                cassandra.execute(\"\"\"\n",
-    "                    insert into sensor_readings(\n",
-    "                        measurement_type, sensor_id, date, event_time, measurement\n",
-    "                    ) values (%s, %s, %s, %s, %s)\n",
-    "                \"\"\", (type, id, date, current_time, measurement))\n",
-    "                cassandra.execute(\"\"\"\n",
-    "                    insert into sensor_anomalies(\n",
-    "                        measurement_type, sensor_id, hour, event_time, measurement\n",
-    "                    ) values (%s, %s, %s, %s, %s)\n",
-    "                \"\"\", (type, id, hour, current_time, measurement))\n",
-    "                cassandra.execute(\"\"\"\n",
-    "                    insert into sensor_by_date(\n",
-    "                        measurement_type, sensor_id, date, event_time, measurement\n",
-    "                    ) values (%s, %s, %s, %s, %s)\n",
-    "                \"\"\", (type, id, date, current_time, measurement))\n",
-    "        # Avanzar al siguiente intervalo de muestreo\n",
-    "        current_time += timedelta(seconds=SAMPLING_RATE)\n",
+    "                measurement = random.uniform(ext_low, ext_high)\n",
+    "\n",
+    "                batch.add(insert_reading, (type, id, date, current_time, measurement))\n",
+    "                batch.add(insert_anomaly, (type, id, hour, current_time, measurement))\n",
+    "                batch.add(insert_by_date, (type, id, date, current_time, measurement))\n",
+    "\n",
+    "        # Ejecutar el batch de forma asíncrona\n",
+    "        futures.append(cassandra.execute_async(batch))\n",
+    "        batch.clear()  # Limpiar el batch para la siguiente iteración\n",
+    "\n",
+    "        # Si el batch alcanza el límite de inflight, esperar a que se completen\n",
+    "        if len(futures) >= max_inflight:\n",
+    "            for f in futures:\n",
+    "                f.result()\n",
+    "            futures.clear()\n",
+    "\n",
+    "        # Retroceder el tiempo para la siguiente iteración\n",
+    "        current_time -= timedelta(seconds=SAMPLING_RATE)\n",
     "    \n",
-    "    print(\"Datos de prueba generados exitosamente.\")\n",
+    "    # Esperar batchs restantes\n",
+    "    for f in futures:\n",
+    "        f.result()\n",
+    "\n",
+    "    result = cassandra.execute(\"select count(*) from sensor_readings\")\n",
+    "    count = list(result)[0][0]\n",
+    "    print(\"Inserción de datos de prueba completada.\\nTotal de registros insertados:\", count)\n",
     "\n",
     "def query_1(type: str, id: str) -> None:\n",
     "    print(\"\\nQuery 1:\")\n",
